--- a/Re_sim.html
+++ b/Re_sim.html
@@ -53,7 +53,7 @@
 
       <label>
 	Word Length :
-	<input type="text" name="wordLength" size="3" value="6000" />
+	<input type="text" name="wordLength" size="3" value="20000" />
       </label>
       <br>
       <label name="checkBox">
@@ -86,7 +86,7 @@
   <script type="text/javascript" src="BeadType.js"></script>
   <script type="text/javascript" src="copy_rule.js"></script>
   <script type="text/javascript" src="canvasControl.js"></script>
-  <script type="text/javascript" src="copy_initial.js"></script>
+  <script type="text/javascript" src="initial.js"></script>
   <script type="text/javascript" src="turn.js"></script>
   <script type="text/javascript" src="control.js"></script>
   <script type="text/javascript" src="testFuncs.js"></script>
