--- a/Re_sim.html
+++ b/Re_sim.html
@@ -53,7 +53,7 @@
 
       <label>
 	Word Length :
-	<input type="text" name="wordLength" size="3" value="20000" />
+	<input type="text" name="wordLength" size="3" value="100000" />
       </label>
       <br>
       <label name="checkBox">
@@ -84,7 +84,7 @@
 
   <script type="text/javascript" src="basicFuncs.js"></script>
   <script type="text/javascript" src="BeadType.js"></script>
-  <script type="text/javascript" src="copy_rule.js"></script>
+  <script type="text/javascript" src="rule.js"></script>
   <script type="text/javascript" src="canvasControl.js"></script>
   <script type="text/javascript" src="initial.js"></script>
   <script type="text/javascript" src="turn.js"></script>
