--- a/Re_sim.html
+++ b/Re_sim.html
@@ -70,6 +70,12 @@
 	Body_height :
 	<input type="text" name="dragon_height" size="2" value="30" />
       </label>
+     <br><br>
+        <label>
+	Direction :
+	<br><label> <input type="radio"  name="direction" value="0" checked=yes/>left</label>
+	<br><label> <input type="radio"  name="direction" value="1"/>right</label>
+      </label>
     </div>
      <input type="submit" name="nextButton" value="Next" />
     <div id="btnMsg"> (Bead types, Word) </div>
