--- a/Re_sim.html
+++ b/Re_sim.html
@@ -58,7 +58,7 @@
     <br>
 
     <div id="secondSettingDiv" class="setting2" style="visibility:hidden">
-      Bit number :
+      Bit_number :
     <br><label> <input type="radio"  name="bitNum" value="1"/>1</label>
 	<br><label> <input type="radio"  name="bitNum" value="2"/>2</label>
 	<br><label> <input type="radio"  name="bitNum" value="3"/>3</label>
@@ -69,6 +69,15 @@
 	   <label>
 	Body_height :
 	<input type="text" name="dragon_height" size="2" value="30" />
+      </label>
+      <br>
+      <label>
+	Start_x :
+	<input type="text" name="start_x" size="5" value="7000" />
+      </label>
+      <label>
+	Start_y :
+	<input type="text" name="start_y" size="5" value="6000" />
       </label>
      <br><br>
         <label>
@@ -94,5 +103,6 @@
   <script type="text/javascript" src="control.js"></script>
   <script type="text/javascript" src="testFuncs.js"></script>
   <script type="text/javascript" src="workerTest.js"></script>
+  <script type="text/javascript" src="make_turn_part.js"></script>
   <noscript>JavaScriptが利用できません。</noscript>
 </body></html>
