--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <body>
 
 
-<a href="overall/Heighway_dragon.html">This is a link</a>
-
+<a href="overall/Heighway_dragon.html">Overall of the Heighway dragon.</a>
+<a href="one_segment/One_segment_simu.html">Overall of the Heighway dragon.</a>
 
 
 </body>
