--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <body>
 
 
-<a href="overall/Heighway_dragon.html">Overall of the Heighway dragon.</a>
+<a href="overall/Heighway_dragon.html">The overall of the Heighway dragon.</a>
 <br></br>
-<a href="one_segment/One_segment_simu.html">Overall of the Heighway dragon.</a>
+<a href="one_segment/One_segment_simu.html">The one segemnt of the Heighway dragon.</a>
 
 
 </body>
