--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 
 <a href="overall/Heighway_dragon.html">The overall of the Heighway dragon.</a>
 <br></br>
-<a href="one_segment/One_segment_simu.html">The one segemnt of the Heighway dragon.</a>
+<a href="one_segment/One_segment_simu.html">The one segment of the Heighway dragon.</a>
 
 
 </body>
