--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <a href="overall/Heighway_dragon.html">The overall of the Heighway dragon.</a>
 <br></br>
 <a href="one_segment/One_segment_simu.html">The one segment of the Heighway dragon.</a>
-
+<a href="Modules/Dzig1/Dzig1.html">The one segment of the Heighway dragon.</a>
 
 </body>
 </html>
