--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <br></br>
 <a href="one_segment/One_segment_simu.html">The one segment of the Heighway dragon.</a>
 <br></br>
-<a href="Modules/Dzig1/Dzig1.html">The one segment of the Heighway dragon.</a>
+<a href="Modules/Dzig1/Dzig1.html">The modules of the DFAO.</a>
 
 </body>
 </html>
