--- a/Modules/Dzig1/Dzig1.html
+++ b/Modules/Dzig1/Dzig1.html
@@ -28,7 +28,7 @@
 </head>
 
 <body>
-  <div style="background-color : pink">OS-simulator settings of DFAO</div>
+  <div style="background-color : pink">OS-simulator of Dzig1</div>
   <br>
   <form name="forms" onsubmit="return false" >
     <div id="firstSettingDiv" style="background-color : lightblue">
