--- a/Modules/Dzig1/Dzig1.html
+++ b/Modules/Dzig1/Dzig1.html
@@ -28,7 +28,7 @@
 </head>
 
 <body>
-  <div style="background-color : pink">OS-simulator of Dzig1</div>
+  <div style="background-color : pink">OS-simulator settings of DFAO</div>
   <br>
   <form name="forms" onsubmit="return false" >
     <div id="firstSettingDiv" style="background-color : lightblue">
@@ -99,8 +99,8 @@
     <div id="btnMsg">  </div>
   </form>
 
-  <canvas id="gridCanvas" width="5000" height="5000"> </canvas>
-  <canvas id="overCanvas" width="4000" height="4000"> </canvas>
+  <canvas id="gridCanvas" width="1000" height="1000"> </canvas>
+  <canvas id="overCanvas" width="1000" height="1000"> </canvas>
   <!-- 前後関係は, 後に記述した要素が前面になる  -->
 
   <script type="text/javascript" src="basicFuncs.js"></script>
