--- a/overall/Heighway_dragon.html
+++ b/overall/Heighway_dragon.html
@@ -58,7 +58,7 @@
     <br>
 
     <div id="secondSettingDiv" class="setting2" style="visibility:hidden">
-      Bit_number :
+      Bit width :
     <br><label> <input type="radio"  name="bitNum" value="1"/>1</label>
 	<br><label> <input type="radio"  name="bitNum" value="2"/>2</label>
 	<br><label> <input type="radio"  name="bitNum" value="3"/>3</label>
