--- a/index.html
+++ b/index.html
@@ -7,7 +7,14 @@
 <br></br>
 <a href="one_segment/One_segment_simu.html">The one segment of the Heighway dragon.</a>
 <br></br>
-<a href="Modules/Dzig1/Dzig1.html">The modules of the DFAO.</a>
+The modules of the Heighway dragon.
+<br></br>
+------------------------------------------------------------------
+<br></br>
+<a href="Modules/Counter/couner_zig.html">Counter-zig</a>
+<br></br>
+
+<a href="Modules/Dzig1/Dzig1.html">DFAO-zig1</a>
 
 </body>
 </html>
