--- a/one_segment/One_segment_simu.html
+++ b/one_segment/One_segment_simu.html
@@ -68,7 +68,7 @@
 	<br><br>
 	   <label>
 	Body_height :
-	<input type="text" name="dragon_height" size="2" value="1" />
+	<input type="text" name="dragon_height" size="2" value="5" />
       </label>
       <br>
       <label>
@@ -82,8 +82,8 @@
      <br><br>
         <label>
 	Direction :
-	<br><label> <input type="radio"  name="direction" value="0" checked=yes/>left</label>
-	<br><label> <input type="radio"  name="direction" value="1"/>right</label>
+	<br><label> <input type="radio"  name="direction" value="0"/>left</label>
+	<br><label> <input type="radio"  name="direction" value="1" checked=yes/>right</label>
       </label>
     </div>
      <input type="submit" name="nextButton" value="Next" />
