--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <body>
 
 
-<a href="overall/Heighway_dragon.html">The overall of the Heighway dragon.</a>
+<a href="Heighway_dragon/Heighway_dragon.html">The overall of the Heighway dragon.</a>
 <br></br>
 <a href="one_segment/One_segment_simu.html">The one segment of the Heighway dragon.</a>
 <br></br>
