--- a/index.html
+++ b/index.html
@@ -1,20 +1,59 @@
-<!DOCTYPE html>
-<html>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="ja" lang="ja">
+<head>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+<meta http-equiv="Content-Style-Type" content="text/css" />
+<meta http-equiv="Content-Script-Type" content="text/javascript" />
+<meta http-equiv="imagetoolbar" content="no" />
+<meta name="description" content="" />
+<meta name="keywords" content="" />
+<link rel="stylesheet" href="css/common.css" type="text/css" />
+<script type="text/javascript" src="js/jquery.js"></script>
+<script type="text/javascript" src="js/common.js"></script>
+<title>Heighway dragon</title>
+</head>
 <body>
-
-
-<a href="Heighway_dragon/Heighway_dragon.html">The overall of the Heighway dragon.</a>
-<br></br>
-<a href="one_segment/One_segment_simu.html">The one segment of the Heighway dragon.</a>
-<br></br>
-The modules of the Heighway dragon.
-<br></br>
-------------------------------------------------------------------
-<br></br>
-<a href="Modules/Counter/couner_zig.html">Counter-zig</a>
-<br></br>
-
-<a href="Modules/Dzig1/Dzig1.html">DFAO-zig1</a>
-
+<div id="top">
+   <div id="header">
+      <h1><a href="index.html">Heighway dragon</a></h1>
+   </div><!-- /#header -->
+   <div id="contents">
+      <div id="main">
+         <h2>Read me!!</h2>
+         <h3>About simulators</h3>
+         <p>
+         Select a module.
+         </p>
+         
+         <h3>Each time</h3>
+         <p>
+         
+         </p>
+      </div><!-- /#main -->
+      <div id="sub">
+         <h2>Simulators</h2>
+         <div id="menu">
+            <ul>
+            <li><a href="Heighway_dragon/Heighway_dragon.html">Overall</a></li>
+            <li><a href="one_segment/One_segment_simu.html">One segment</a></li>
+            <li><a href="modules.html">Modules</a></li>
+            </ul>
+         </div><!-- /#menu -->
+      </div><!-- /#sub -->
+   </div><!-- /#contents -->
+   <div id="footer">
+      <div id="pageTop">
+         <a href="#top"><img src="images/pagetop.gif" alt="ページのトップへ戻る" /></a>
+      </div><!-- /#pageTop -->
+      <div id="footerMenu">
+         <ul>
+         <li><a href="index.html">footerMenu1</a></li>
+         <li><a href="index.html">footerMenu2</a></li>
+         <li><a href="index.html">footerMenu3</a></li>
+         </ul>
+      </div><!-- /#footerMenu -->
+      <div class="copyright">Copyright &copy; 2011 YOUR SITE NAME All Rights Reserved.</div>
+   </div><!-- /#footer -->
+</div><!-- /#top -->
 </body>
 </html>
