--- a/One_segment/One_segment_simu.html
+++ b/One_segment/One_segment_simu.html
@@ -58,7 +58,7 @@
     <br>
 
     <div id="secondSettingDiv" class="setting2" style="visibility:hidden">
-      Bit_number :
+      Bit_width :
     <br><label> <input type="radio"  name="bitNum" value="1"/>1</label>
 	<br><label> <input type="radio"  name="bitNum" value="2"/>2</label>
 	<br><label> <input type="radio"  name="bitNum" value="3"/>3</label>
@@ -67,7 +67,7 @@
 	<br><label> <input type="radio"  name="bitNum" value="6"/>6</label>
 	<br><br>
 	   <label>
-	Body_height :
+	Body_length :
 	<input type="text" name="dragon_height" size="2" value="2" />
       </label>
       <br>
