--- a/modules.html
+++ b/modules.html
@@ -19,17 +19,23 @@
    </div><!-- /#header -->
    <div id="contents">
       <div id="main">
-         <h2>Select a module</h2>
+         <h2>Choose a module</h2>
          <h3>Counter</h3>
          <p>
          <a href="Modules/Counter/couner_zig.html">Counter-zig</a> 
-         <br></br>
+         <br>
          <a href="Modules/Counter_zag/couner_zag.html">Counter-zag</a> 
          </p>
          
          <h3>DFAO</h3>
          <p>
-         
+         <a href="Modules/Dzig1/Dzig1.html">DFAO-zig1</a> 
+         <br>
+         <a href="Modules/Dzag1/Dzag1.html">DFAO-zag1</a> 
+         <br>
+         <a href="Modules/Dzig2/Dzig2.html">DFAO-zig2</a>
+         <br>
+         <a href="Modules/Dzag2/Dzag2.html">DFAO-zag2</a> 
          </p>
          <h3>Turn</h3>
          <p>
