--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
    <div id="contents">
       <div id="main">
          <h2>Read me!!</h2>
-         <h3>How to use our simulator</h3>
+         <h3>How to use our simulators</h3>
          <h4>Step 1: Input airty, delay, word length</h4>
          <p>
          <IMG src="images/simu1.png" alt="First setting" title="First setting">
