--- a/index.html
+++ b/index.html
@@ -58,7 +58,9 @@
          <li><a href="index.html">footerMenu3</a></li>
          </ul>
       </div><!-- /#footerMenu -->
+      <div class="copyright">Oritatami lab</div>
    </div><!-- /#footer -->
+   
 </div><!-- /#top -->
 </body>
 </html>
