--- a/modules.html
+++ b/modules.html
@@ -47,6 +47,25 @@
          <h3>Turn</h3>
          <p>
          <a href="Modules/body-gx/body-gx.html">body-gx</a>
+         <br>
+         <a href="Modules/body-lgy/body-lgy.html">body-lgy</a>
+         <br>
+         <a href="Modules/body-rgy/body-rgy.html">body-rgy</a>
+         <br>
+         <a href="Modules/body-lpx1/body-lpx1.html">body-lpx1</a>
+         <br>
+         <a href="Modules/body-lpx2/body-lpx2.html">body-lpx2</a>
+         <br>
+         <a href="Modules/body-rpx/body-rpx.html">body-rpx</a>
+         <br>
+         <a href="Modules/turn-lgp/turn-lgp.html">turn-lgp</a>
+         <br>
+         <a href="Modules/turn-rgp/turn-rgp.html">turn-rgp</a>
+         <br>
+         <a href="Modules/move/move.html">move</a>
+         <br>
+         <a href="Modules/change-route/change-route.html">change-route</a>
+         <br>
          </p>
          
       </div><!-- /#main -->
@@ -72,7 +91,7 @@
          <li><a href="index.html">footerMenu3</a></li>
          </ul>
       </div><!-- /#footerMenu -->
-      <div class="copyright">Copyright &copy; 2011 YOUR SITE NAME All Rights Reserved.</div>
+      <div class="copyright">Oritatami lab</div>
    </div><!-- /#footer -->
 </div><!-- /#top -->
 </body>
