--- a/Modules/Counter/couner_zig.html
+++ b/Modules/Counter/couner_zig.html
@@ -69,18 +69,30 @@
   	<div id="inputDiv">
       Chose the conformation
       <br>
+      body-rpx
+      <br>
       <label> <input type="radio"  name="inputNum" value="0" id = "input_id1" checked=yes/>
       	<IMG src="Co_zigb0.png"  width="250" height="200" onClick="document.getElementById('input_id1').checked=true">
       </label>
       <label> <input type="radio"  name="inputNum" value="1" id = "input_id2" />
       	<IMG src="Co_zigb1.png"  width="250" height="200" onClick="document.getElementById('input_id2').checked=true">
       </label>
+      
       <br>
       <label> <input type="radio"  name="inputNum" value="0" id = "radio_id3"/>
       	<IMG src="Co_zigu0.png"  width="250" height="200" onClick="document.getElementById('radio_id3').checked=true">
       </label>
       <label> <input type="radio"  name="inputNum" value="1" id = "radio_id4"/>
       	<IMG src="Co_zigu1.png" width="250" height="200" onClick="document.getElementById('radio_id4').checked=true">
+      </label>
+      <br>
+      Counter_zag
+      <br>
+      <label> <input type="radio"  name="inputNum" value="0" id = "radio_id1"/>
+      	<IMG src="Co_zigb0.png"  width="250" height="200" onClick="document.getElementById('radio_id1').checked=true">
+      </label>
+      <label> <input type="radio"  name="inputNum" value="1" id = "radio_id2"/>
+      	<IMG src="Co_zigb1.png" width="250" height="200" onClick="document.getElementById('radio_id2').checked=true">
       </label>
      </div>
 
