--- a/Modules/Dzag2/Dzag2.html
+++ b/Modules/Dzag2/Dzag2.html
@@ -69,39 +69,43 @@
   	<div id="inputDiv">
       Chose the conformation
       <br>
+      Bottom
+      <br>
       <label> <input type="radio"  name="inputNum" value="0" id = "input_id1" checked=yes/>
-      	0-b0
+      	0
       	<IMG src="Dzig1-20.png" width="250" height="150" onClick="document.getElementById('input_id1').checked=true">
       </label>
-      f0-b0
+      f0
       <label> <input type="radio"  name="inputNum" value="1" id = "input_id2" />
       	<IMG src="Dzig1-21.png" width="250" height="150" onClick="document.getElementById('input_id2').checked=true">
       </label>
-      k0-b0
+      k0
       <label> <input type="radio"  name="inputNum" value="2" id = "radio_id3"/>
       	<IMG src="Dzig1-f0.png" width="250" height="150" onClick="document.getElementById('radio_id3').checked=true">
       </label>
       <br>
       <label> <input type="radio"  name="inputNum" value="3" id = "radio_id4"/>
-      	1-b1
+      	1
       	<IMG src="Dzig1-1.png" width="250" height="150" onClick="document.getElementById('radio_id4').checked=true">
       </label>
       <label> <input type="radio"  name="inputNum" value="4" id = "radio_id5"/>
-      	k1-ch1
+      	k1
       	<IMG src="Dzig1-1.png" width="250" height="150" onClick="document.getElementById('radio_id5').checked=true">
       </label>
       <br>
+      Top
+      <br>
       <label> <input type="radio"  name="inputNum" value="5" id = "input_id1" checked=yes/>
-      	0-t0
+      	0
       	<IMG src="Dzig1-20.png" width="250" height="150" onClick="document.getElementById('input_id1').checked=true">
       </label>
       <label> <input type="radio"  name="inputNum" value="6" id = "input_id1" checked=yes/>
-      	f0-t0
+      	f0
       	<IMG src="Dzig1-20.png" width="250" height="150" onClick="document.getElementById('input_id1').checked=true">
       </label>
       <br>
       <label> <input type="radio"  name="inputNum" value="7" id = "input_id1" checked=yes/>
-      	1-t1
+      	1
       	<IMG src="Dzig1-20.png" width="250" height="150" onClick="document.getElementById('input_id1').checked=true">
       </label>
      </div>
