--- a/One_segment/One_segment_simu.html
+++ b/One_segment/One_segment_simu.html
@@ -81,7 +81,7 @@
       </label>
      <br><br>
         <label>
-	Direction :
+	State q_2 :
 	<br><label> <input type="radio"  name="direction" value="0" checked=yes/>left</label>
 	<br><label> <input type="radio"  name="direction" value="1"/>right</label>
       </label>
