--- a/modules.html
+++ b/modules.html
@@ -43,6 +43,10 @@
          <a href="Modules/Dzag2/Dzag2.html">DFAO-zag2</a> 
          <br>
          <a href="Modules/PFS/PFS.html">PFS</a>
+         <br>
+         <a href="Modules/AO1/AO1.html">AO1</a>
+         <br>
+         <a href="Modules/AO2/AO2.html">AO2</a>
          </p>
          <h3>Turn</h3>
          <p>
