--- a/Heighway_dragon/Heighway_dragon.html
+++ b/Heighway_dragon/Heighway_dragon.html
@@ -99,10 +99,10 @@
   <script type="text/javascript" src="rule.js"></script>
   <script type="text/javascript" src="canvasControl.js"></script>
   <script type="text/javascript" src="initial.js"></script>
-  <script type="text/javascript" src="turn2.js"></script>
+  <script type="text/javascript" src="turn.js"></script>
   <script type="text/javascript" src="control.js"></script>
   <script type="text/javascript" src="testFuncs.js"></script>
   <script type="text/javascript" src="workerTest.js"></script>
-  <script type="text/javascript" src="make_turn_part2.js"></script>
+  <script type="text/javascript" src="make_turn_part.js"></script>
   <noscript>JavaScriptが利用できません。</noscript>
 </body></html>
