--- a/Modules/body-lgy/body-lgy.html
+++ b/Modules/body-lgy/body-lgy.html
@@ -72,12 +72,11 @@
       Bottom
       <br>
       <label> <input type="radio"  name="inputNum" value="0" id = "input_id1" checked=yes/>
-      	0
-      	<IMG src="Dzig1-20.png" width="250" height="150" onClick="document.getElementById('input_id1').checked=true">
+      	<IMG src="body-lpx1-0.png" width="300" height="300" onClick="document.getElementById('input_id1').checked=true">
       </label>
       <label> <input type="radio"  name="inputNum" value="1" id = "input_id2" />
-      	1
-      	<IMG src="Dzig1-21.png" width="250" height="150" onClick="document.getElementById('input_id2').checked=true">
+
+      	<IMG src="body-lpx1-1.png" width="300" height="300" onClick="document.getElementById('input_id2').checked=true">
       </label>
       <br>
      </div>
