--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <div id="main">
          <h2>Read me!!</h2>
          <h3>How to use our simulators</h3>
-         <h4>Step 1: Input airty, delay, word length</h4>
+         <h4>Step 1: Input arity, delay, word length</h4>
          <p>
          <IMG src="images/simu1.png" alt="First setting" title="First setting">
          This step inputs values of arity &alpha; , delay &delta; , and word length. <br>
