--- a/Modules/change-route/change-route.html
+++ b/Modules/change-route/change-route.html
@@ -71,11 +71,11 @@
       <br>
       <label> <input type="radio"  name="inputNum" value="0" id = "input_id1" checked=yes/>
       	change-a
-      	<IMG src="Co_zigb0.png"  width="150" height="100" onClick="document.getElementById('input_id1').checked=true">
+      	<IMG src="change-A.png"  width="400" height="175" onClick="document.getElementById('input_id1').checked=true">
       </label>
       <label> <input type="radio"  name="inputNum" value="1" id = "input_id2" />
       	change-o
-      	<IMG src="Co_zigb1.png"  width="150" height="100" onClick="document.getElementById('input_id2').checked=true">
+      	<IMG src="change-O.png"  width="400" height="175" onClick="document.getElementById('input_id2').checked=true">
       </label>
       
      </div>
