--- a/Modules/move/move.html
+++ b/Modules/move/move.html
@@ -71,20 +71,20 @@
       <br>
       <label> <input type="radio"  name="inputNum" value="0" id = "input_id1" checked=yes/>
       	rpx-0
-      	<IMG src="Co_zigb0.png"  width="150" height="100" onClick="document.getElementById('input_id1').checked=true">
+      	<IMG src="TA-0.png"  width="200" height="150" onClick="document.getElementById('input_id1').checked=true">
       </label>
       <label> <input type="radio"  name="inputNum" value="1" id = "input_id2" />
       	turn-0
-      	<IMG src="Co_zigb1.png"  width="150" height="100" onClick="document.getElementById('input_id2').checked=true">
+      	<IMG src="TH-0.png"  width="200" height="150" onClick="document.getElementById('input_id2').checked=true">
       </label>
       <br>
       <label> <input type="radio"  name="inputNum" value="2" id = "input_id3" />
       	rpx-1
-      	<IMG src="Co_zigb1.png"  width="150" height="100" onClick="document.getElementById('input_id3').checked=true">
+      	<IMG src="TA-1.png"  width="200" height="150" onClick="document.getElementById('input_id3').checked=true">
       </label>
       <label> <input type="radio"  name="inputNum" value="3" id = "input_id4" />
       	turn-1
-      	<IMG src="Co_zigb1.png"  width="150" height="100" onClick="document.getElementById('input_id4').checked=true">
+      	<IMG src="TH-1.png"  width="200" height="150" onClick="document.getElementById('input_id4').checked=true">
       </label>
      </div>
 
