--- a/modules.html
+++ b/modules.html
@@ -22,7 +22,7 @@
       	 <h2>Overall view</h2>
       	 <a href="images/DFAO_abst2.png">DFAO</a><br>
       	 
-      	 <a href="images/overall_turn_part.pdf">Turn</a>
+      	 <a href="images/bitmap.png">Turn</a>
       	 
          <h2>Choose a module</h2>
          <h3>Counter</h3>
