--- a/Modules/Counter_zag/couner_zag.html
+++ b/Modules/Counter_zag/couner_zag.html
@@ -71,20 +71,20 @@
       <br>
       <label> <input type="radio"  name="inputNum" value="0" id = "input_id1" checked=yes/>
       	t0-0
-      	<IMG src="Co_zigb0.png"  width="250" height="200" onClick="document.getElementById('input_id1').checked=true">
+      	<IMG src="Counter_zag0b.png"  width="250" height="200" onClick="document.getElementById('input_id1').checked=true">
       </label>
       <label> <input type="radio"  name="inputNum" value="1" id = "input_id2" />
       	b0-0
-      	<IMG src="Co_zigb1.png"  width="250" height="200" onClick="document.getElementById('input_id2').checked=true">
+      	<IMG src="Counter_zag0a.png"  width="250" height="200" onClick="document.getElementById('input_id2').checked=true">
       </label>
       <br>
       <label> <input type="radio"  name="inputNum" value="2" id = "radio_id3"/>
       	t1-1
-      	<IMG src="Co_zigu0.png"  width="250" height="200" onClick="document.getElementById('radio_id3').checked=true">
+      	<IMG src="Counter_zag1a.png"  width="250" height="200" onClick="document.getElementById('radio_id3').checked=true">
       </label>
       <label> <input type="radio"  name="inputNum" value="3" id = "radio_id4"/>
       	b1-1
-      	<IMG src="Co_zigu1.png" width="250" height="200" onClick="document.getElementById('radio_id4').checked=true">
+      	<IMG src="Counter_zag1b.png" width="250" height="200" onClick="document.getElementById('radio_id4').checked=true">
       </label>
      </div>
 
