--- a/Modules/Dzig1/Dzig1.html
+++ b/Modules/Dzig1/Dzig1.html
@@ -70,17 +70,17 @@
       Chose the conformation
       <br>
       <label> <input type="radio"  name="inputNum" value="0" id = "input_id1" checked=yes/>
-      	<IMG src="Dzig1-20.png" width="250" height="150" onClick="document.getElementById('input_id1').checked=true">
+      	<IMG src="DFAO-zig1_20.png" width="250" height="150" onClick="document.getElementById('input_id1').checked=true">
       </label>
       <label> <input type="radio"  name="inputNum" value="1" id = "input_id2" />
-      	<IMG src="Dzig1-21.png" width="250" height="150" onClick="document.getElementById('input_id2').checked=true">
+      	<IMG src="DFAO-zig1_21.png" width="250" height="150" onClick="document.getElementById('input_id2').checked=true">
       </label>
       <br>
       <label> <input type="radio"  name="inputNum" value="0" id = "radio_id3"/>
-      	<IMG src="Dzig1-f0.png" width="250" height="150" onClick="document.getElementById('radio_id3').checked=true">
+      	<IMG src="DFAO-zig1_f0.png" width="250" height="150" onClick="document.getElementById('radio_id3').checked=true">
       </label>
       <label> <input type="radio"  name="inputNum" value="1" id = "radio_id4"/>
-      	<IMG src="Dzig1-1.png" width="250" height="150" onClick="document.getElementById('radio_id4').checked=true">
+      	<IMG src="DFAO-zig1_1.png" width="250" height="150" onClick="document.getElementById('radio_id4').checked=true">
       </label>
      </div>
 
